gas/testsuite/gas/i386/dwarf2-line-4.s
@@ -7,6 +7,7 @@
 main:
         .cfi_startproc
         nop
+	.file 1 "dwarf2-test.c"
 	.loc 1 1
         ret
         .cfi_endproc
